deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: deploy
    run: deploy
  name: deploy
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    run: deploy
  type: NodePort
